--- a/plugin.xml
+++ b/plugin.xml
@@ -27,9 +27,9 @@
       </feature>
     </config-file>
     <config-file parent="/*" target="res/values/strings.xml">
-      <string name="app_key">$APP_KEY</string>
-      <string name="app_secret">$APP_SECRET</string>
-      <string name="app_scope">$APP_SCOPE</string>
+      <string name="wb_app_key">$APP_KEY</string>
+      <string name="wb_app_secret">$APP_SECRET</string>
+      <string name="wb_app_scope">$APP_SCOPE</string>
     </config-file>
     <config-file parent="/*" target="AndroidManifest.xml"></config-file>
     
