--- a/plugin.xml
+++ b/plugin.xml
@@ -37,9 +37,11 @@
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
       <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
       <activity android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
                 android:configChanges="keyboardHidden|orientation"
-                android:windowSoftInputMode="adjustResize">
+                android:windowSoftInputMode="adjustResize"
+                android:exported="false" >
       </activity>
     </config-file>
     
