--- a/plugin.xml
+++ b/plugin.xml
@@ -47,7 +47,7 @@
     
     <source-file src="src/android/Weibo.java" target-dir="src/com/ihavekey/weibo/oauth" />
     <source-file src="src/android/weibosdkcore_v3.0.1.jar" target-dir="libs" framework="true" />
-    <source-file src="src/android/libs/armeabi/libweibosdkcore.so" target-dir="libs/armeabi" />
+    <source-file src="src/android/libs/armeabi/libweibosdkcore.so" target-dir="libs/armeabi-v7a" />
     <source-file src="src/android/libs/mips/libweibosdkcore.so" target-dir="libs/mips" />
     <source-file src="src/android/libs/x86/libweibosdkcore.so" target-dir="libs/x86" />
   </platform>
