change name to prevent name clashing
It's better to make this js-module name configurable

--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
   </engines>
 
   <js-module name="WeiboConnect" src="www/weibo-connect.js">
-    <clobbers target="weibo" />
+    <clobbers target="WeiboSso" />
   </js-module>
 
   <platform name="android">
